Added launch4j configuration for building Windows EXEs